# madara

./: CHANGELOG.md  Cargo.toml
crates/client/consensus/: Cargo.toml
crates/client/consensus/src/: lib.rs
crates/client/data-availability/: Cargo.toml
crates/client/data-availability/src/: lib.rs
crates/client/l1-messages/: Cargo.toml
crates/client/mapping-sync/src/: sync_blocks.rs
crates/client/rpc/src/: lib.rs
crates/client/rpc/src/events/: mod.rs  tests.rs
crates/node/: Cargo.toml
crates/node/src/: service.rs
crates/node/src/commands/: run.rs
crates/pallets/starknet/: Cargo.toml
crates/pallets/starknet/src/: lib.rs  message.rs  mock.rs  tests.rs  types.rs
crates/pallets/starknet/src/tests/: call_contract.rs  declare_tx.rs  deploy_account_tx.rs  erc20.rs  events.rs  invoke_tx.rs  l1_message.rs  mock.rs  mod.rs  no_nonce_validation.rs  query_tx.rs
crates/pallets/starknet/src/tests/mock/: helpers.rs
crates/primitives/digest-log/src/: lib.rs
crates/primitives/snos-output/src/: codec.rs
crates/primitives/starknet/: Cargo.toml
crates/primitives/starknet/src/block/: header.rs  mod.rs
crates/primitives/starknet/src/crypto/commitment/: mod.rs
crates/primitives/starknet/src/crypto/hash/: pedersen.rs  poseidon.rs
crates/primitives/starknet/src/tests/: utils.rs
crates/primitives/starknet/src/transaction/: compute_hash.rs  compute_hash_tests.rs  conversions.rs  execution.rs  mod.rs  to_starknet_core_transaction.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs  pallets.rs
tests/tests/test-starknet-rpc/: test-transactions.ts
