[package]
name = "mc-consensus"
version = "2.0.0-dev"
license = "MIT"
authors = [
	"Timothée Delabrouille <https://github.com/tdelabro>",
	"Parity Technologies <admin@parity.io>",
	"Substrate DevHub <https://github.com/substrate-developer-hub>",
]
edition = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = "0.1"
thiserror = "1.0"
# Substrate
sc-consensus = { workspace = true }
sp-api = { workspace = true }
sp-block-builder = { workspace = true, features = ["default"] }
sp-blockchain = { workspace = true }
sp-consensus = { workspace = true }
sp-runtime = { workspace = true }
sp-core = { workspace = true }
# Madara
mp-digest-log = { workspace = true }
